--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.0",
-    "systemjs": "0.19.6",
+    "bootstrap": "^3.3.6",
+    "del": "^1.1.1",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10",
-
-    "del": "^1.1.1",
     "event-stream": "^3.3.0",
     "gulp": "^3.8.11",
     "gulp-angular-templatecache": "^1.7.0",
@@ -30,8 +26,13 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.6",
+    "materialize-css": "^0.97.5",
+    "reflect-metadata": "0.1.2",
     "run-sequence": "^1.0.2",
-    "streamqueue": "^0.1.3"
+    "rxjs": "5.0.0-beta.0",
+    "streamqueue": "^0.1.3",
+    "systemjs": "0.19.6",
+    "zone.js": "0.5.10"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
